--- a/projects/evaluate-news-nlp/src/client/views/index.html
+++ b/projects/evaluate-news-nlp/src/client/views/index.html
@@ -19,15 +19,27 @@
 
         <main>
             <section>
-                <form class="" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" onblur="Client.onBlur()" placeholder="Name">
-                    <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return handleSubmit(event)">
+                <form action="/nlp" method="post"  class="" onsubmit="return Client.handleSubmit(event)" >
+                    <input id="url" type="text" name="url" value=""  placeholder="URL">
+                    <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             </section>
 
             <section>
                 <strong>Form Results:</strong>
-                <div id="results"></div>
+
+               
+                <div id="results">
+
+
+
+                    <textarea name="" id="myTextarea" cols="30" rows="10"></textarea>
+
+                  
+
+
+
+                </div>
             </section>
         </main>
 
