--- a/projects/evaluate-news-nlp/src/client/views/index.html
+++ b/projects/evaluate-news-nlp/src/client/views/index.html
@@ -26,14 +26,14 @@
             </section>
 
             <section>
-                <strong>Form Results:</strong>
+                <strong  >NLP Results:</strong>
 
-               
-                <div id="results">
+                
+                <div   id="results" >
 
+                   
 
-
-                    <textarea name="" id="myTextarea" cols="30" rows="10"></textarea>
+                    <textarea name="nlpRender"  id="nlpRender" cols="30" rows="10"></textarea>
 
                   
 
