Finalize the project

--- a/projects/evaluate-news-nlp/src/client/views/index.html
+++ b/projects/evaluate-news-nlp/src/client/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Test</title>
+        <title>Evaluate a news article with Natural Language Processing</title>
        
     </head>
 
@@ -10,18 +10,19 @@
 
         <header>
             <div class="">
-                Logo
+                
             </div>
             <div class="">
-                navigation
+                
             </div>
         </header>
 
         <main>
             <section>
+                <h1>Evaluate a news article with Natural Language Processing</h1>
                 <form action="/nlp" method="post"  class="" onsubmit="return Client.handleSubmit(event)" >
-                    <input id="url" type="text" name="url" value=""  placeholder="URL">
-                    <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
+                    <input id="url" type="text" name="url" value=""  placeholder="Select valid url to evaluate">
+                    <input type="submit" name="" value="NLP Evaluate" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             </section>
 
@@ -44,7 +45,7 @@
         </main>
 
         <footer>
-            <p>This is a footer</p>
+            <p></p>
         </footer>
         <script>
             // Check that service workers are supported
